tests/comp/sem/invalid/5gon12eder_thinks_that_this_is_actually_invalid.mj
class A {

	public static void main(String[] args) {
		/* Didn't we discuss that this usage should be disallowed? */
		args;
		return;
	}

}
